@@ -1,5 +1,8 @@
 2018-02-10  Dirk Eddelbuettel  <edd@debian.org>
 
+	* src/LARS.cpp: Completed roxygen docs of variables
+	* man/LARS.Rd: Idem
+
 	* src/init.c: Removed, now auto-generated in RcppExports.cpp
 	* src/RcppExports.cpp: Regenerated
 	* R/RcppExports.R: Idem
